add editing a dataset from a graphical interface

--- a/www/static/add_to_dataset.html
+++ b/www/static/add_to_dataset.html
@@ -29,6 +29,7 @@
 
     <button class="btn btn-primary" onclick="submit()">Submit</button>
 
-    <script src="/static/add_to_dataset.js"></script>
+    <script src="/static/add_to_dataset.js" type="module"></script>
+    <script src="/static/extract_entity.js" type="module"></script>
 </body>
 </html>
