add ui to create templates

--- a/www/static/add_to_dataset.html
+++ b/www/static/add_to_dataset.html
@@ -23,6 +23,7 @@
             <span>entity</span>
             <span>role</span>
             <span>value</span>
+            <span class="entity-delete">delete</span>
         </div>
         <div style="width: 100%; background: #c5c5c5; height: 1px; margin: 2px 0 12px 0;"></div>
     </div><br>
